<resources>
    <string name="app_name">QIBus</string>
    <string name="QIBus_softui_contentDescription">TODO</string>
    <string name="QIBus_softui_txt_todo">TODO</string>
    <string name="QIBus_softui_txt_high_hill_manali">High Hill Manali</string>
    <string name="QIBus_softui_txt_4_days_3_nights">4 Days 3 Nights</string>
    <string name="QIBus_softui_txt_new_package">New Packages</string>
    <string name="QIBus_softui__500"><strike>$ 500</strike></string>
    <string name="QIBus_softui_txt_03_bus_available">4 Bus Available</string>
    <string name="QIBus_softui_text_seat">Seat</string>
    <string name="QIBus_softui_msg_shareapp">Hey check out my app at: https://play.google.com/store/apps/developer?id=IQONIC+Design</string>
    <string name="QIBus_softui_send_to">Share using</string>
    <string name="QIBus_softui_txtYourCode">Your code:</string>
    <string name="QIBus_softui_txtTotalEarning">Total Earning</string>
    <string name="QIBus_softui_txt_your_link">Your Link :</string>
    <string name="QIBus_softui_text_get_100_when_your_friend_complete_trip_with_us">Get $100 when your friend completes a trip with us</string>
    <string name="QIBus_softui_hint_enter_your_contact_number">Enter Contact Number</string>
    <string name="QIBus_softui_lbl_email">Email :</string>
    <string name="QIBus_softui_txt_emailid">John@gmail.com</string>
    <string name="QIBus_softui_lbl_wallet">Refer friends, Earn wallet money</string>
    <string name="QIBus_softui_lbl_your_wallet_in_balance">Your Balance in the wallet</string>
    <string name="QIBus_softui_txt_visa">VISA</string>
    <string name="QIBus_softui_title_price">Price</string>
    <string name="QIBus_softui_text_confirmed">Confirmed</string>
    <string name="QIBus_softui_text_destination">Ahmedabad (Guj) To High Hill,Manali</string>
    <string name="QIBus_softui_hint_from_city">From City</string>
    <string name="QIBus_softui_hint_to_city">To City</string>
    <string name="QIBus_softui_txt_view_all">View all</string>
    <string name="QIBus_softui_txt_new_offers">New Offers</string>
    <string name="QIBus_softui_txt_popular_package">Popular Packages</string>
    <string name="QIBus_softui_title_email_notification_settings">Email Notification Settings</string>
    <string name="QIBus_softui_txt_email_notification">Email Notification</string>
    <string name="QIBus_softui_lbl_contact_number_settings">Contact Number Notification Settings</string>
    <string name="QIBus_softui_lbl_mobile_no">Mobile No :</string>
    <string name="QIBus_softui_lbl_number_notification">Number Notification</string>
    <string name="QIBus_softui_title_language_setting">Language Settings</string>
    <string name="QIBus_softui_lbl_language">Language :</string>
    <string name="QIBus_softui_txt_english_us">English-US</string>
    <string name="QIBus_softui_lbl_first_name">First Name :</string>
    <string name="QIBus_softui_lbl_last_name">Last Name :</string>
    <string name="QIBus_softui_lbl_gender">Gender :</string>
    <string name="QIBus_softui_title_edit_your_name">Edit Your Name</string>
    <string name="QIBus_softui_title_edit_your_contact">Edit Your Contact</string>
    <string name="QIBus_softui_lbl_total_fare">Total Fare</string>
    <string name="QIBus_softui_lbl_pnr_no">PNR No</string>
    <string name="QIBus_softui_txt_busTime">18:00</string>
    <string name="QIBus_softui_txt_time">8:00</string>
    <string name="QIBus_softui_txt_date">28-May-2019</string>
    <string name="QIBus_softui_title_toolbar_cards">Cards</string>
    <string name="QIBus_softui_hint_enter_your_emailId">Enter Your Email Id</string>
    <string name="QIBus_softui_txt_samay_travel_main_office">Samay Travel Main Office</string>
    <string name="QIBus_softui_txt_near_alim_chowk_manali">Near Alim Chowk,Manali</string>
    <string name="QIBus_softui_txt_ticket_no">Ticket No</string>
    <string name="QIBus_softui_msg_email_required">Email required</string>
    <string name="QIBus_softui_msg_email_valid">Enter Valid Email</string>
    <string name="QIBus_softui_msg_first_name">First name required</string>
    <string name="QIBus_softui_msg_last_name">Last name required</string>
    <string name="QIBus_softui_msg_mobile_number">Mobile number required</string>
    <string name="QIBus_softui_msg_email_id">Email Id required</string>
    <string name="QIBus_softui_hint_email">Enter Email ID</string>
    <string name="QIBus_softui_ahmedabad_guj_high_hill_manali">Ahmedabad(Guj)- High Hill,Manali,Gujarat India</string>
    <string name="QIBus_softui_volvo_bus">Volvo Bus</string>
    <string name="QIBus_softui_txtCancelled">Cancelled</string>
    <string name="QIBus_softui_txtColon">:</string>
    <string name="QIBus_softui_search">Search</string>
    <string name="QIBus_softui_lbl_special">SPECIAL</string>
    <string name="QIBus_softui_lbl_use_code">Use Code:</string>
    <string name="QIBus_softui_lbl_notification">Notification</string>
    <string name="QIBus_softui_lbl_verification">Enter your verification code \n we have just sent you on your mobile number</string>
    <string name="QIBus_softui_txt_verify">Verify</string>
    <string name="QIBus_softui_txt_Resend">Re-send</string>
    <string name="QIBus_softui_lbl_StarRatings">Star Ratings</string>
    <string name="QIBus_softui_txt_BusType">Bus Type</string>
    <string name="QIBus_softui_lbl_Apply">Apply</string>
    <string name="QIBus_softui_text_you_want_to">Welcome to</string>
    <string name="QIBus_softui_text_travel">QIBUS</string>
    <string name="QIBus_softui_hint_mobile">Mobile Number</string>
    <string name="QIBus_softui_lbl_continue">Continue</string>
    <string name="QIBus_softui_text_signInwith">Sign In With</string>
    <string name="QIBus_softui_verification">Verification</string>
    <string name="QIBus_softui_refere_and_earn">Refer &amp; Earn</string>
    <string name="QIBus_softui_profile_settings">Edit Profile</string>
    <string name="QIBus_softui_lbl_profile_settings">Edit Profile</string>
    <string name="QIBus_softui_lbl__wallet">Wallet</string>
    <string name="QIBus_softui_lbl_cards">Cards</string>
    <string name="QIBus_softui_lbl_help">Help and Support</string>
    <string name="QIBus_softui_lbl_2342340">2342340</string>
    <string name="QIBus_softui_lbl_submit">Submit</string>
    <string name="QIBus_softui_home">Home</string>
    <string name="QIBus_softui_text_book_now">Book Now</string>
    <string name="QIBus_softui_text_contact_information">Contact Information</string>
    <string name="QIBus_softui_text_phone">Phone :</string>
    <string name="QIBus_softui_txt_passenger">Passenger: </string>
    <string name="QIBus_softui_hint_enter_name">Enter Name</string>
    <string name="QIBus_softui_hint_enter_age">Enter Age</string>
    <string name="QIBus_softui_hint_card_number">Card Number</string>
    <string name="QIBus_softui__200">$200.00</string>
    <string name="QIBus_softui__1">1</string>
    <string name="QIBus_softui_text_select_month">Month</string>
    <string name="QIBus_softui_text_select_year">Year</string>
    <string name="QIBus_softui_text_card_holder_name">Card Holder Name</string>
    <string name="QIBus_softui_text_valid">Valid</string>
    <string name="QIBus_softui_lbl_ac">AC</string>
    <string name="QIBus_softui_lbl_non_ac">NON-AC</string>
    <string name="QIBus_softui_lbl_sleeper">SLEEPER</string>
    <string name="QIBus_softui_lbl_seater">SEATER</string>
    <string name="QIBus_softui_lbl_payment">Payment</string>
    <string name="QIBus_softui_txt_cancelled">Cancelled</string>
    <string name="QIBus_softui_text_available">Available</string>
    <string name="QIBus_softui_text_booked">Booked</string>
    <string name="QIBus_softui_text_pickup_point">Pickup point</string>
    <string name="QIBus_softui_text_dropping_points">Dropping point</string>
    <string name="QIBus_softui_text_selected">Selected</string>
    <string name="QIBus_softui_lbl_35">$35</string>
    <string name="QIBus_softui_smith_travels">Smith travels</string>
    <string name="QIBus_softui_text_net_banking">Net Banking</string>
    <string name="QIBus_softui_text_offers">Offers</string>
    <string name="QIBus_softui_text_credit_card">Credit Card</string>
    <string name="QIBus_softui_text_debit">Debit Cart</string>
    <string name="QIBus_softui_text_Mobilewallet">Mobile Wallet</string>
    <string name="QIBus_softui_text_bus_list">Buses</string>
    <string name="QIBus_softui_hint_enter_first_name">Enter First Name</string>
    <string name="QIBus_softui_hint_enter_last_name">Enter Last Name</string>
    <string name="QIBus_softui_text_save">Save</string>
    <string name="QIBus_softui_text_ticket_book">Paynow</string>
    <string name="QIBus_softui_text_total_amount">Total Amount</string>
    <string name="QIBus_softui_txt_copy">Copied</string>
    <string name="QIBus_softui_text_offercode">Offer Code</string>
    <string name="QIBus_softui_text_package">Package</string>
    <string name="QIBus_softui_msg_from">From city required</string>
    <string name="QIBus_softui_msg_to">To city required</string>
    <string name="QIBus_softui_msg_name">Name required</string>
    <string name="QIBus_softui_ms_age">Age required</string>
    <string name="QIBus_softui_msg_digit">Card Number required</string>
    <string name="QIBus_softui_msg_code">Code required</string>
    <string name="QIBus_softui_msg_holdername">Holder Name required</string>
    <string name="QIBus_softui_text_hour">Hour</string>
    <string name="QIBus_softui_rs">$ </string>
    <string name="QIBus_softui_text_link">@string/QIBus_softui_msg_shareapp</string>
    <string name="QIBus_softui_text_remove">Item was removed from the list.</string>
    <string name="QIBus_softui_text_undo">UNDO</string>
    <string name="QIBus_softui_title_add_new_card">Add new card</string>
    <string name="QIBus_softui_title_wallet">Wallet</string>
    <string name="QIBus_softui_text_trending_packages">Trending Packages</string>
    <string name="QIBus_softui_text_description">Description</string>
    <string name="QIBus_softui_text_upper">Upper</string>
    <string name="QIBus_softui_text_lower">Lower</string>
    <string name="QIBus_softui_text_ladies">Ladies</string>
    <string name="QIBus_softui_text_logout">Logout</string>
    <string name="QIBus_softui_text_100">0</string>
    <string name="QIBus_softui_text_500">500</string>
    <string name="QIBus_softui_msg_saved">Saved</string>
    <string name="QIBus_softui_text_confirmation">Confirmation!</string>
    <string name="QIBus_softui_msg_logout">Are you sure, you want to logout?</string>
    <string name="QIBus_softui_text_yes">Yes</string>
    <string name="QIBus_softui_text_no">No</string>
    <string name="QIBus_softui_text_totalseat">Total Seat:</string>
    <string name="QIBus_softui_text_cvv">CVV</string>
    <string name="QIBus_softui_text_seat_no">Seat No</string>
    <string name="QIBus_softui__5">/5</string>
    <string name="QIBus_softui_text_5">5</string>
    <string name="QIBus_softui_text_addcard">Add Card</string>
    <string name="QIBus_softui_text_settings">Settings</string>
    <string name="QIBus_softui_text_select_bus">Select Seat</string>
    <string name="QIBus_softui_text_hold">Hold</string>
    <string name="QIBus_softui_text_ticket_price">Ticket Price :</string>
    <string name="QIBus_softui_text_tax">Tax :</string>
    <string name="QIBus_softui_text_5txt">$5</string>
    <string name="QIBus_softui_text_total_price">Total:</string>
    <string name="QIBus_softui_text_payment_success">Payment Success !</string>
    <string name="QIBus_softui_text_close">Close</string>
    <string name="QIBus_softui_msg_success">Thank you for booking. Enjoy your trip</string>
    <string name="QIBus_softui_lbl_card_digit1">6253</string>
    <string name="QIBus_softui_lbl_card_digit2">5686</string>
    <string name="QIBus_softui_lbl_card_digit3">5623</string>
    <string name="QIBus_softui_txt_user_name">John</string>
</resources>