<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/IQBUSSoftUIScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/qibus_softui_bg_toolbar"
        android:theme="@style/Toolbar"
        app:contentInsetStart="0dp"
        app:titleTextColor="@color/QIBus_softui_white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/QIBus_softui_txt_todo"
                android:padding="@dimen/QIBus_softui_spacing_medium"
                android:src="@drawable/qibus_softui_ic_left_arrow_white" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/QIBus_softui_spacing_medium"
                android:layout_toStartOf="@id/ivNotification"
                android:layout_toEndOf="@+id/ivBack"
                android:fontFamily="@font/googlesansextrabold"
                android:text="@string/QIBus_softui_lbl_help"
                android:textColor="@color/QIBus_softui_white"
                android:textSize="@dimen/QIBus_softui_font_mlarge" />

            <include layout="@layout/qibus_softui_layout_addnotification" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        style="@style/IQBUSSoftUIScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="@dimen/QIBus_softui_spacing_medium"
        android:layout_marginTop="@dimen/QIBus_softui_spacing_medium"
        android:layout_marginEnd="@dimen/QIBus_softui_spacing_medium"
        android:layout_marginBottom="@dimen/QIBus_softui_bg_decrease20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edContact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/qibus_softui_inner"
            android:fontFamily="@font/googlesansregular"
            android:hint="@string/QIBus_softui_hint_enter_your_contact_number"
            android:inputType="number"
            android:textColor="@color/QIBus_softui_textChild"
            android:textSize="@dimen/QIBus_softui_font_large" />


        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/QIBus_softui_spacing_medium"
            android:background="@drawable/qibus_softui_inner"
            android:fontFamily="@font/googlesansregular"
            android:hint="@string/QIBus_softui_hint_enter_your_emailId"
            android:inputType="textEmailAddress"
            android:textColor="@color/QIBus_softui_textChild"
            android:textSize="@dimen/QIBus_softui_font_large" />


        <EditText
            android:id="@+id/edMessage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/QIBus_softui_spacing_medium"
            android:background="@drawable/qibus_softui_inner"
            android:fontFamily="@font/googlesansregular"
            android:gravity="top"
            android:hint="@string/QIBus_softui_text_description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:textColor="@color/QIBus_softui_textChild"
            android:textSize="@dimen/QIBus_softui_font_large" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/qibus_softui_ic_card_new">

            <TextView
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/googlesansbold"
                android:gravity="center"
                android:text="@string/QIBus_softui_lbl_submit"
                android:textAllCaps="false"
                android:textColor="@color/QIBus_softui_textColorPrimary"
                android:textSize="@dimen/QIBus_softui_font_large" />

        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>